syntax = "proto3";

package patient.events;
option  java_multiple_files = true;

message PatientEvent {
  string patientId = 1;
  string firstname = 2;
  string lastname = 3;
  string birthDate = 4;
  string event_type = 5;
}
